[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/World/SubWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/World/GameRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/World/Floors/Medical.gd" type="Script" id=3]

[node name="Medical" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="MedRoom" parent="." index="0" instance=ExtResource( 2 )]
roomName = "Med Lobby"
roomID = "med_lobby_start"
roomDescription = "You stand in the medical lobby, it’s very sterile here, the omnipresent smell of antiseptic follows you any way you go. The walls and floors are white, many lights make this floor look quite bright. A few benches are placed along the walls where inmates can wait or have a rest.

You notice two airlocks that lead to the staff-only rooms, you can’t even open them without having access or being brought in by someone.

Behind the counter you notice a few nurses busy with their stuff."
population = 3

[node name="MedRoom2" parent="." index="1" instance=ExtResource( 2 )]
position = Vector2( -64, 0 )
roomName = "Med Lobby"
roomDescription = "You stand in the medical lobby, it’s very sterile here, the omnipresent smell of antiseptic follows you any way you go. The walls and floors are white, many lights make this floor look quite bright. A few benches are placed along the walls where inmates can wait or have a rest.

You notice two airlocks that lead to the staff-only rooms, you can’t even open them without having access or being brought in by someone.

Behind the counter you notice a few nurses busy with their stuff."
roomSprite = 6
population = 3

[node name="MedRoom3" parent="." index="2" instance=ExtResource( 2 )]
position = Vector2( 64, 0 )
roomName = "Med Lobby"
roomID = "med_lobbyse"
roomDescription = "You stand in the medical lobby, it’s very sterile here, the omnipresent smell of antiseptic follows you any way you go. The walls and floors are white, many lights make this floor look quite bright. A few benches are placed along the walls where inmates can wait or have a rest.

You notice two airlocks that lead to the staff-only rooms, you can’t even open them without having access or being brought in by someone.

Behind the counter you notice a few nurses busy with their stuff."
population = 3

[node name="MedRoom4" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( 0, -64 )
roomName = "Med Lobby"
roomID = "med_lobbymain"
roomDescription = "You stand in the medical lobby, it’s very sterile here, the omnipresent smell of antiseptic follows you any way you go. The walls and floors are white, many lights make this floor look quite bright. A few benches are placed along the walls where inmates can wait or have a rest.

You notice two airlocks that lead to the staff-only rooms, you can’t even open them without having access or being brought in by someone.

Behind the counter you notice a few nurses busy with their stuff."
roomSprite = 1
population = 3

[node name="MedRoom5" parent="." index="4" instance=ExtResource( 2 )]
position = Vector2( 64, -64 )
roomName = "Med Lobby"
roomID = "med_lobbyne"
roomDescription = "You stand in the medical lobby, it’s very sterile here, the omnipresent smell of antiseptic follows you any way you go. The walls and floors are white, many lights make this floor look quite bright. A few benches are placed along the walls where inmates can wait or have a rest.

You notice two airlocks that lead to the staff-only rooms, you can’t even open them without having access or being brought in by someone.

Behind the counter you notice a few nurses busy with their stuff."
canEast = false
population = 3

[node name="MedRoom6" parent="." index="5" instance=ExtResource( 2 )]
position = Vector2( -64, -64 )
roomName = "Med Lobby"
roomID = "med_lobbynw"
roomDescription = "You stand in the medical lobby, it’s very sterile here, the omnipresent smell of antiseptic follows you any way you go. The walls and floors are white, many lights make this floor look quite bright. A few benches are placed along the walls where inmates can wait or have a rest.

You notice two airlocks that lead to the staff-only rooms, you can’t even open them without having access or being brought in by someone.

Behind the counter you notice a few nurses busy with their stuff."
canWest = false
population = 3

[node name="MedNursery" parent="." index="6" instance=ExtResource( 2 )]
self_modulate = Color( 0.7, 1, 0.7, 1 )
position = Vector2( 128, 0 )
roomName = "Nursery"
roomID = "medical_nursery"
roomDescription = "You enter the daycare lobby. Not much is here, just a nurse that's staring at a computer screen behind the table. You do see a closed door that leads into some other room but you have no access to it as an inmate."
canNorth = false
canSouth = false
roomSprite = 5
roomColor = 1
population = 3

[node name="MedRoom7" parent="." index="7" instance=ExtResource( 2 )]
position = Vector2( -128, -64 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the corridor seems to be safe for inmates to walk through but you better not go too far or the staff will start asking questions."
gridColor = 3
population = 2
astarConnectedTo = PoolStringArray( "med_lobbynw" )

[node name="MedRoom8" parent="." index="8" instance=ExtResource( 2 )]
position = Vector2( 128, -64 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the corridor seems to be safe for inmates to walk through but you better not go too far or the staff will start asking questions."
gridColor = 3
population = 2
astarConnectedTo = PoolStringArray( "med_lobbyne" )

[node name="MedRoom9" parent="." index="9" instance=ExtResource( 2 )]
position = Vector2( 128, -128 )
roomName = "Med Floor Corridor"
roomID = "medical_nearconfessionary"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the corridor seems to be safe for inmates to walk through but you better not go too far or the staff will start asking questions."
population = 2

[node name="MedConfessionary" parent="." index="10" instance=ExtResource( 2 )]
self_modulate = Color( 0.7, 0.7, 1, 1 )
position = Vector2( 192, -128 )
roomName = "Confessionary"
roomID = "medical_confessionary"
roomDescription = "As you enter the room, you are immediately struck by the contrast between the luxurious furnishings and the rough concrete walls. The wooden floors and plush carpet add to the sense of opulence, as do the richly-styled sofa, chair, and small round table.

But as you look around the room, you can't help but notice the iron hooks hanging from the ceiling. They seem out of place in this otherwise refined space, and a shiver runs down your spine as you wonder what purpose they could possibly serve."
roomColor = 3
population = 2

[node name="MedRoom10" parent="." index="11" instance=ExtResource( 2 )]
position = Vector2( 128, -192 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the corridor seems to be safe for inmates to walk through but you better not go too far or the staff will start asking questions."
population = 2

[node name="MedRoom11" parent="." index="12" instance=ExtResource( 2 )]
position = Vector2( 128, -256 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom12" parent="." index="13" instance=ExtResource( 2 )]
position = Vector2( 128, -320 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom13" parent="." index="14" instance=ExtResource( 2 )]
position = Vector2( 64, -320 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom14" parent="." index="15" instance=ExtResource( 2 )]
position = Vector2( 0, -320 )
roomName = "Med Floor Corridor"
roomID = "medical_firstcorridorcross"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom21" parent="." index="16" instance=ExtResource( 2 )]
position = Vector2( 0, -384 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom22" parent="." index="17" instance=ExtResource( 2 )]
position = Vector2( 0, -448 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom23" parent="." index="18" instance=ExtResource( 2 )]
position = Vector2( -64, -448 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom24" parent="." index="19" instance=ExtResource( 2 )]
position = Vector2( 64, -448 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom25" parent="." index="20" instance=ExtResource( 2 )]
position = Vector2( 128, -448 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom26" parent="." index="21" instance=ExtResource( 2 )]
position = Vector2( 128, -512 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom27" parent="." index="22" instance=ExtResource( 2 )]
position = Vector2( 128, -576 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom53" parent="." index="23" instance=ExtResource( 2 )]
position = Vector2( 64, -640 )
roomName = "Hospital wards"
roomID = "medical_hospitalwards"
roomDescription = "Before you is a a dimly lit space, designed to let treated inmates rest. Cold, sterile walls. Decorative plants.

You notice a row of medical beds, equipped with monitoring and life support systems. Not very comfy but they seem to get the job done."
population = 2

[node name="MedRoom28" parent="." index="24" instance=ExtResource( 2 )]
position = Vector2( -128, -448 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom29" parent="." index="25" instance=ExtResource( 2 )]
position = Vector2( -128, -512 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom45" parent="." index="26" instance=ExtResource( 2 )]
position = Vector2( -192, -512 )
roomName = "Medical Storage"
roomID = "medical_storage"
roomDescription = "You enter a room with a lot of storage cabinets and special types of freezers. It seems this is the room where they keep their equipment and drugs"
roomSprite = 4
gridColor = 2
population = 2

[node name="MedRoom30" parent="." index="27" instance=ExtResource( 2 )]
position = Vector2( -128, -576 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom42" parent="." index="28" instance=ExtResource( 2 )]
position = Vector2( -64, -576 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom43" parent="." index="29" instance=ExtResource( 2 )]
position = Vector2( 0, -576 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom44" parent="." index="30" instance=ExtResource( 2 )]
position = Vector2( 64, -576 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom31" parent="." index="31" instance=ExtResource( 2 )]
position = Vector2( 192, -512 )
roomName = "Mental Ward"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom32" parent="." index="32" instance=ExtResource( 2 )]
position = Vector2( 256, -512 )
roomName = "Mental Ward"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom33" parent="." index="33" instance=ExtResource( 2 )]
position = Vector2( 320, -512 )
roomName = "Mental Ward"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom46" parent="." index="34" instance=ExtResource( 2 )]
position = Vector2( -256, -256 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom47" parent="." index="35" instance=ExtResource( 2 )]
position = Vector2( -256, -384 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom50" parent="." index="36" instance=ExtResource( 2 )]
position = Vector2( -320, -384 )
roomName = "Med Shower"
roomDescription = "You enter the medical wing shower room. It’s pretty spacious here, the bleak gray design and fixed shower heads show that it’s clearly made for patients rather than staff."
roomSprite = 7

[node name="MedRoom51" parent="." index="37" instance=ExtResource( 2 )]
position = Vector2( -320, -320 )
roomName = "Med Shower"
roomID = "medical_shower"
roomDescription = "You enter the medical wing shower room. It’s pretty spacious here, the bleak gray design and fixed shower heads show that it’s clearly made for patients rather than staff."
roomSprite = 7

[node name="MedRoom52" parent="." index="38" instance=ExtResource( 2 )]
position = Vector2( -320, -256 )
roomName = "Med Shower"
roomDescription = "You enter the medical wing shower room. It’s pretty spacious here, the bleak gray design and fixed shower heads show that it’s clearly made for patients rather than staff."
roomSprite = 7

[node name="MedRoom48" parent="." index="39" instance=ExtResource( 2 )]
position = Vector2( -256, -320 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom49" parent="." index="40" instance=ExtResource( 2 )]
position = Vector2( -192, -320 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom34" parent="." index="41" instance=ExtResource( 2 )]
position = Vector2( 256, -384 )
roomName = "Padded cell"
roomDescription = "You are in a mental ward cell. All of the walls are made out of a soft padded material so you can’t hurt yourself here even if you really wanted to."
blindRoomDescription = "You have no idea where you are but the walls and the floor feel soft to the touch"
canWest = false
canNorth = false
canSouth = false

[node name="MedRoom35" parent="." index="42" instance=ExtResource( 2 )]
position = Vector2( 320, -384 )
roomName = "Mental Ward"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom40" parent="." index="43" instance=ExtResource( 2 )]
position = Vector2( 256, -448 )
roomName = "Mental Ward"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom41" parent="." index="44" instance=ExtResource( 2 )]
position = Vector2( 320, -448 )
roomName = "Mental Ward"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom36" parent="." index="45" instance=ExtResource( 2 )]
position = Vector2( 320, -320 )
roomName = "Mental Ward"
roomID = "medical_near_pccell"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom37" parent="." index="46" instance=ExtResource( 2 )]
position = Vector2( 320, -256 )
roomName = "Mental Ward"
roomDescription = "You are walking through the mental ward, a place where doctors treat inmates with severe mental health problems. You notice that there are many padded cells around."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom38" parent="." index="47" instance=ExtResource( 2 )]
position = Vector2( 256, -320 )
roomName = "Padded cell"
roomID = "medical_paddedcell_player"
roomDescription = "You are in a mental ward cell. All of the walls are made out of a soft padded material so you can’t hurt yourself here even if you really wanted to."
blindRoomDescription = "You have no idea where you are but the walls and the floor feel soft to the touch"
canWest = false
canNorth = false
canSouth = false

[node name="MedRoom39" parent="." index="48" instance=ExtResource( 2 )]
position = Vector2( 256, -256 )
roomName = "Padded cell"
roomDescription = "You are in a mental ward cell. All of the walls are made out of a soft padded material so you can’t hurt yourself here even if you really wanted to."
blindRoomDescription = "You have no idea where you are but the walls and the floor feel soft to the touch"
canWest = false
canNorth = false
canSouth = false

[node name="MedRoom15" parent="." index="49" instance=ExtResource( 2 )]
position = Vector2( -64, -320 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom16" parent="." index="50" instance=ExtResource( 2 )]
position = Vector2( -128, -320 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom17" parent="." index="51" instance=ExtResource( 2 )]
position = Vector2( -128, -256 )
roomName = "Med Floor Corridor"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the medical wing is marked as [color=red]off-limits[/color] for inmates."
gridColor = 2
loctag_MentalWard = true
population = 2

[node name="MedRoom18" parent="." index="52" instance=ExtResource( 2 )]
position = Vector2( -128, -192 )
roomName = "Med Floor Corridor"
roomID = "med_nearmilking"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the corridor seems to be safe for inmates to walk through but you better not go too far or the staff will start asking questions."
population = 2

[node name="MedRoom19" parent="." index="53" instance=ExtResource( 2 )]
position = Vector2( -128, -128 )
roomName = "Med Floor Corridor"
roomID = "med_nearlab"
roomDescription = "You stand in a wide white corridor, it looks pretty long, every so often you see airlocks that lead to laboratories and other rooms. This part of the corridor seems to be safe for inmates to walk through but you better not go too far or the staff will start asking questions."
population = 2

[node name="MedLab" parent="." index="54" instance=ExtResource( 2 )]
self_modulate = Color( 0.7, 0.7, 1, 1 )
position = Vector2( -192, -128 )
roomName = "Research Lab"
roomID = "med_researchlab"
roomDescription = "This is clearly a space where research is done, you notice a lot of scientific equipment, storage drawers and a chemistry station. In the middle of the room there is a special table with a console and a scanner attached to it."
roomColor = 3
population = 2

[node name="MedMilkingRoom" parent="." index="55" instance=ExtResource( 2 )]
self_modulate = Color( 0.7, 0.7, 1, 1 )
position = Vector2( -64, -192 )
roomName = "Milking room"
roomID = "med_milkingroom"
roomDescription = "As soon as you enter this room you notice many milking stalls that are placed along one of the walls in a row. Each stall is made out of metal bars and some plumbing that is connected to the huge milk storage unit near the opposite wall."
canSouth = false
roomColor = 3
population = 2

[node name="MedElevator" parent="." index="56" instance=ExtResource( 2 )]
self_modulate = Color( 1, 0.6, 0.6, 1 )
position = Vector2( 0, 64 )
roomName = "Elevator"
roomID = "med_elevator"
roomDescription = "Spacious elevator that can move people or a huge amount of cargo between floors. Walls are made out of black painted metal, you notice a control panel that has a few buttons."
roomSprite = 3
roomColor = 2
population = 3

[connection signal="onEnter" from="MedRoom2" to="." method="_on_MedRoom2_onEnter"]
[connection signal="onReact" from="MedRoom2" to="." method="_on_MedRoom2_onReact"]
[connection signal="onEnter" from="MedRoom7" to="." method="_on_MedRoom7_onEnter"]
[connection signal="onReact" from="MedRoom7" to="." method="_on_MedRoom7_onReact"]
[connection signal="onEnter" from="MedRoom8" to="." method="_on_MedRoom8_onEnter"]
[connection signal="onReact" from="MedRoom8" to="." method="_on_MedRoom8_onReact"]
[connection signal="onEnter" from="MedElevator" to="." method="_on_MedElevator_onEnter"]
[connection signal="onReact" from="MedElevator" to="." method="_on_MedElevator_onReact"]
